--- a/css/output.css
+++ b/css/output.css
@@ -4,19 +4,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
-  gap: 100px;
-}
-
-.welcomeScreen_Button {
-  height: 50px;
-  width: 150px;
-  border-radius: 5px;
-  border: 2px solid #6baae5;
-  background-color: #a2d2ff;
-  font-weight: 600;
-  color: black;
-  cursor: pointer;
 }
 
 * {
@@ -25,5 +12,7 @@
   margin: 0;
   font-family: poppins;
 }
+
+/*# sourceMappingURL=output.css.map */
 
 /*# sourceMappingURL=output.css.map */
