--- a/src/Style/main.scss
+++ b/src/Style/main.scss
@@ -1,5 +1,9 @@
+@import "WelcomeScreen";
+@import "QuizScreen";
+
 * {
   padding: 0;
   box-sizing: border-box;
   margin: 0;
+  font-family: poppins;
 }
