--- a/src/Style/output.css
+++ b/src/Style/output.css
@@ -6,14 +6,140 @@
   align-items: center;
   flex-direction: column;
   gap: 100px;
+  background-color: #f1faee;
 }
 
 .welcomeScreen_Button {
   height: 50px;
   width: 150px;
   border-radius: 5px;
-  border: 2px solid #6baae5;
-  background-color: #a2d2ff;
+  border: 2px solid #457b9d;
+  background-color: #e63946;
+  font-weight: 600;
+  color: black;
+  cursor: pointer;
+}
+
+.quizScreen_Container {
+  width: 100vw;
+  height: 100vh;
+  background-color: #f1faee;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+}
+
+.quizScreen_QuestionContainer {
+  width: 50vh;
+  height: 20vh;
+  background-color: #1d3557;
+  color: white;
+  border-radius: 30px;
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.quizScreen_QuestionContainer .QuestionContainer_QuestionNumber {
+  font-weight: 400;
+  margin-bottom: 20px;
+}
+.quizScreen_QuestionContainer .QuestionContainer_QuestionNumber span {
+  font-size: medium;
+  font-weight: 100;
+}
+.quizScreen_QuestionContainer .QuestionContainer_QuestionText {
+  font-weight: 300;
+}
+.quizScreen_QuestionContainer .QuestionContainer_OptionSection {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.quizScreen_QuestionContainer .QuestionContainer_OptionSection .option {
+  height: 50px;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  border-radius: 10px;
+  border: 2px solid #a8dadc;
+  cursor: pointer;
+}
+.quizScreen_QuestionContainer .QuestionContainer_OptionSection .active {
+  background-color: #a8dadc;
+  color: #1d3557;
+  border: 2px solid #457b9d;
+}
+
+.quizScreen_AnswerContainer {
+  width: 50vh;
+  height: 20vh;
+  background-color: #1d3557;
+  background-color: #1d3557;
+  color: white;
+  border-radius: 30px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.quizScreen_AnswerContainer h1 {
+  font-weight: 400;
+}
+
+.quiz-Section_ButtonContainer {
+  width: 50vh;
+  height: 20vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.quiz-Section_ButtonContainer button {
+  height: 50px;
+  width: 150px;
+  border-radius: 5px;
+  border: 2px solid #457b9d;
+  background-color: #e63946;
+  font-weight: 600;
+  color: black;
+  cursor: pointer;
+}
+.quiz-Section_ButtonContainer button[disabled] {
+  height: 50px;
+  width: 150px;
+  border-radius: 5px;
+  background-color: #5c5b5b;
+  font-weight: 600;
+  color: black;
+  cursor: not-allowed;
+}
+.quiz-Section_ButtonContainer .buttonHide {
+  display: none;
+}
+
+.scoreScreen_Container {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 100px;
+  background-color: #f1faee;
+}
+.scoreScreen_Container img {
+  height: 10vh;
+}
+.scoreScreen_Container button {
+  height: 50px;
+  width: 150px;
+  border-radius: 5px;
+  border: 2px solid #457b9d;
+  background-color: #e63946;
   font-weight: 600;
   color: black;
   cursor: pointer;
