--- a/src/Style/WelcomeScreen.scss
+++ b/src/Style/WelcomeScreen.scss
@@ -6,13 +6,14 @@
   align-items: center;
   flex-direction: column;
   gap: 100px;
+  background-color: #f1faee;
 }
 .welcomeScreen_Button {
   height: 50px;
   width: 150px;
   border-radius: 5px;
-  border: 2px solid #6baae5;
-  background-color: #a2d2ff;
+  border: 2px solid #457b9d;
+  background-color: #e63946;
   font-weight: 600;
   color: black;
   cursor: pointer;
